tests/parser/invalid/function_without_name.src
fn () {  // Ошибка: отсутствует имя функции
    return 42;
}